dockerrun.aws.json file and deploy section for .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after_success:
   - docker push fredrikolsson/multi-nginx
   - docker push fredrikolsson/multi-server
   - docker push fredrikolsson/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-north-1
+  app: udemy-multi-docker
+  env: UdemyMultiDocker-env
+  bucket_name: elasticbeanstalk-eu-north-1-173558890210
+  bucket_path: docker-multi
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
